--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,21 @@
 body {
 	padding: 10px;
-	margin: 0; 
+	margin: 0;
+	background-color: #f9534d;
+}
+
+h1 {
+	text-align: center;
+	text-decoration: underline;
+}
+
+p {
+	float: right;
+}
+
+.clearfix {
+	clear: both;
+}
+.nav-default {
+	float: left;
 }
