--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,6 @@ h1 {
 	text-decoration: underline;
 }
 
-p {
-	float: right;
-}
-
 .clearfix {
 	clear: both;
 }
@@ -21,6 +17,14 @@ p {
 }
 
 .container {
-	margin-top: 20px;
-	border: 1px solid black;
+	margin-top: 200px;
+	/*border: 1px solid black;*/
+}
+
+.col-sm-6 {
+	border: 2px solid black;
+	background-color: #A9A9A9;
+	text-align: center;
+	padding: 0 10px;
+	justify-content: space-around;
 }
